Fix alignment on login button

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -11,7 +11,8 @@ div .hero-body {
 }
 
 .twitter-login-btn {
-  margin-top: 0.9rem;
+  margin-top: 0.88rem;
+  /* color: #0084b4; */
 }
 
 .modal-content {
